Реализовал основной сервис